# SentimentCF

./: .gitignore  pyproject.toml  recs.ipynb  test.py
Code/: data.py  dataclean.ipynb  id-to-so.py  model.py  project.ipynb  project.py  so-to-rating.py  train.py
DualModel/: data.py  dataset.py  id-to-so.py  model.py
Inference/: dataset.py  metrics.py  modelarc.py  neumfrecs.py  rating-pred.py  recs.py
NeuMF/: data.py  train.py
NeuMF/march/: neumf.py
RtPred/: data.py  rating-pred.py
RtPred/march/: neumf.py
SoPred/: data.py  so-pred.py
SoPred/march/: dnn.py  neumf.py
datacleaning/: dataclean.ipynb  datacleaning-movie.ipynb  mf.py
train-out/: neumf.out  rt-dnn.out  rt-neumf.out
