[tool.poetry]
name = "cs-439-finalproject"
version = "0.1.0"
description = ""
authors = ["sprutz <leroy.souz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
